apps/gcp/tekton/configs/tests/set-node-selector-tekton-taskrun-pods/resource-retry.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bp-tikv-nextgen-linux-amd64-6b8b2-deliver-images-pod-retry2
  namespace: default
  labels:
    tekton.dev/taskRun: bp-tikv-nextgen-linux-amd64-6b8b2-deliver-images
spec:
  containers:
    - name: step-run
      image: gcr.io/go-containerregistry/crane/debug:latest
